separate OS-specific styles into their own skins on Firefox 3, and fix the transparent tabs problem in the Windows-specific skin

--- a/chrome/content/personas.css
+++ b/chrome/content/personas.css
@@ -40,7 +40,7 @@
  */
 
 #personas-selector-button {
-  list-style-image: url("chrome://personas/skin/personas_16x16.png");
+  list-style-image: url("chrome://personas/content/personas_16x16.png");
   -moz-image-region: rect(0, 16px, 16px, 0px);
   border: 0 !important;
 }
@@ -57,102 +57,8 @@
 }
 
 #personas-selector-menu menuitem[busy="true"] {
-  list-style-image: url("chrome://personas/skin/Throbber-small.gif");
+  list-style-image: url("chrome://personas/content/Throbber-small.gif");
 }
-
-
-/**
- * Modifications to the appearance of the browser chrome when the user
- * has selected a persona.
- */
-
-#main-window[persona] {
-  -moz-appearance: none;
-  background-repeat: no-repeat;
-  background-position: top right;
-}
-
-#main-window[persona] #urlbar {
-  opacity: 0.8;
-}
-
-#main-window[persona] #searchbar {
-  opacity: 0.8;
-}
-
-#main-window[persona] toolbox {
-  -moz-appearance: none !important;
-  background-color: transparent !important;
-  border-top: 0;
-}
-
-#main-window[persona] toolbar:not([id="FindToolbar"]), toolbarpalette {
-  -moz-appearance: none !important;
-  background-image: none !important; /* mac-specific */
-  background-repeat: no-repeat !important;  /* mac-specific */
-  background-color: transparent !important; /* mac-specific */
-  border-bottom-color: transparent !important;
-  border-top-color: transparent !important;
-} 
-
-#main-window[persona] toolbar:first-child, menubar {
-  border-bottom-color: transparent;
-}
-
-#main-window[persona] toolbarbutton:not([class="tab-close-button"]) { 
-  -moz-appearance: none !important;
-  background-color: transparent !important;
-  background-repeat: no-repeat !important; 
-} 
-
-/* windows-specific tabs */
-#main-window[persona] .tabbrowser-tabs {
-  background-color: transparent !important;
-  background-image: none !important; 
-}
-
-#main-window[persona] .tabbrowser-tab {
-  background-color: transparent !important;
-  background-image: none !important;
-  opacity: 0.85 !important;
-}
-
-#main-window[persona] .tabbrowser-strip {
-  -moz-appearance: none; /* mac-specific */
-}
-
-
-/* bottom box */
-
-#browser-bottombox[persona] {
-  background-repeat: no-repeat;
-  background-position: bottom left;
-  background-color: transparent;
-}
-
-/**
- * Everything inside the bottom box should have no native appearance
- * (since that could override the persona's specified background image),
- * no background color (which would bleed through the persona), and no
- * border (not sure why; perhaps it looks cleaner and messes up the
- * persona less).
- */
-#browser-bottombox[persona] > * {
-  -moz-appearance: none;
-  background-color: transparent;
-  background-image: none;
-  border: 0 !important;
-}
-
-/**
- * The statusbarpanel element that sits inside the statusbar element
- * defines its own border, so we have to turn that off separately.
- */
-#browser-bottombox[persona] statusbarpanel {
-  -moz-appearance: none !important;
-  border: 0 !important;
-}
-
 
 /**
  * Turn text white if the selected persona is dark-colored.  We do this
@@ -178,4 +84,36 @@
 #main-window[_personas-dark-style*="true"] #browser-bottombox toolbarbutton[disabled="true"]
 {
   color: #cccccc !important;
+}
+
+
+/* Footer */
+
+#browser-bottombox[persona] {
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-color: transparent;
+}
+
+/**
+ * Everything inside the bottom box should have no native appearance
+ * (since that could override the persona's specified background image),
+ * no background color (which would bleed through the persona), and no
+ * border (not sure why; perhaps it looks cleaner and messes up the
+ * persona less).
+ */
+#browser-bottombox[persona] > * {
+  -moz-appearance: none;
+  background-color: transparent;
+  background-image: none;
+  border: 0 !important;
+}
+
+/**
+ * The statusbarpanel element that sits inside the statusbar element defines
+ * its own background color and border, so we have to turn them off separately.
+ */
+#browser-bottombox[persona] statusbarpanel {
+  -moz-appearance: none;
+  border: 0;
 }
